# flashbets

./: .gitignore  ADVANCED_TRADING_FEATURES_IMPLEMENTATION.md  BUILD_ERROR_REPORT.md  CLAUDE.md  CLAUDE_MD_REQUIREMENTS_EXTRACTION.md  COMPILATION_FIX_REPORT.md  COMPREHENSIVE_BETTING_PLATFORM_IMPLEMENTATION_REPORT.md  COMPREHENSIVE_BUILD_DEPLOYMENT_VERIFICATION.md  COMPREHENSIVE_IMPLEMENTATION_REPORT.md  Cargo.toml  DEMO_INSTRUCTIONS.md  FINAL_BUILD_AND_DEPLOYMENT_SUMMARY.md  FINAL_COMPREHENSIVE_IMPLEMENTATION_REPORT.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_PHASE_1_TO_8_IMPLEMENTATION_REPORT.md  GITHUB_PUBLISHING.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_IMPLEMENTATION_REPORT.md  PART7_API_DOCUMENTATION.md  PART7_COMPLETE_IMPLEMENTATION_DOCUMENTATION.md  PART7_COMPLETE_VERIFICATION.md  PART7_COMPLIANCE_MATRIX.md  PART7_FINAL_COMPLIANCE_REPORT.md  PART7_FINAL_IMPLEMENTATION_SUMMARY.md  PART7_TESTING_RESULTS.md  PART7_TEST_VERIFICATION_REPORT.md  PART7_VERIFICATION_REPORT.md  PART_7_EXPANDED_IMPLEMENTATION_REPORT.md  PART_7_IMPLEMENTATION_DOCUMENTATION.md  PART_7_MONEY_MAKING_GUIDE.md  PHASE_13_IMPLEMENTATION_DOCUMENTATION.md  PHASE_13_VERIFICATION_CHECKLIST.md  PHASE_1_BUILD_FIX_REPORT.md  PHASE_1_COMPLETION_REPORT.md  PHASE_1_GAP_ANALYSIS.md  PHASE_1_IMPLEMENTATION_PROGRESS.md  PHASE_1_IMPLEMENTATION_REPORT.md  PHASE_1_INFRASTRUCTURE_ANALYSIS.md  (+68 more)
betting_platform/api_runner/: .env.example  BACKEND_FEATURES_DOCUMENTATION.md  CLAUDE_MD_VERIFICATION_COMPLETE.md  COMPILATION_FIXES_REPORT.md  COMPREHENSIVE_IMPLEMENTATION_REPORT.md  COMPREHENSIVE_TEST_REPORT.md  Cargo.toml  Dockerfile  FINAL_IMPLEMENTATION_REPORT.md  FINAL_SUMMARY.md  FINAL_USER_JOURNEY_FIXES.md  IMPLEMENTATION_DOCUMENTATION.md  IMPLEMENTATION_SUMMARY.md  POLYMARKET_INTEGRATION_SUMMARY.md  PRODUCTION_READINESS_REPORT.md  TESTING_DOCUMENTATION.md  USER_JOURNEY_FIXES_SUMMARY.md  USER_JOURNEY_TEST_FIXES.md  benchmark_throughput.sh  comprehensive_test.py  comprehensive_test_suite.html  debug_verses.sh  docker-compose.yml  exhaustive_user_journey_test.sh  fix_final_warnings.sh  fix_more_warnings.sh  fix_quantum_tests.sh  fix_warnings.sh  generate_coverage_report.js  generate_polymarket_api_key.js  load_test.js  load_test_polymarket.sh  phase6_circuit_breaker_system.md  phase6_tracing_logger.md  phase7_market_creation.md  phase7_trade_execution.md  postgresql_tuning.md  run_all_tests.sh  run_automated_tests.js  run_tests.sh  (+73 more)
betting_platform/api_runner/abi/: ctf_exchange.json  erc20.json
betting_platform/api_runner/config/: .gitignore  config.default.toml  config.development.toml  config.production.toml
betting_platform/api_runner/docker/: Dockerfile
betting_platform/api_runner/docs/: ENVIRONMENT_VARIABLES.md  IMPLEMENTATION_REPORT.md  cross_platform_compatibility.md  environment_configuration_system.md  feature_flag_system.md  health_check_system.md  mock_services_system.md  phase4_core_functionality_implementation.md  phase5_external_api_integration.md  phase5_smart_contract_deployment.md  phase5_solana_integration_implementation.md  phase6_typed_error_system.md  settlement_system.md  state_management_system.md  test_data_management.md  validation_framework.md  warning_reduction_summary.md
betting_platform/api_runner/k8s/: deployment.yaml  ingress.yaml
betting_platform/api_runner/load_test/: load_test.js  run_load_test.sh
betting_platform/api_runner/scripts/: deploy.sh  deploy_contracts.sh  test_deployment.sh  test_external_api.sh  test_settlement.sh  test_state_management.sh  test_test_data.sh  test_validation_framework.sh
betting_platform/api_runner/src/: auth.rs  auth_endpoints.rs  auth_handlers.rs  cache.rs  circuit_breaker.rs  circuit_breaker_integration.rs  circuit_breaker_middleware.rs  config.rs  correlation_context.rs  deployment_endpoints.rs  domain_validators.rs  environment_config.rs  environment_config_endpoints.rs  error.rs  error_handlers.rs  error_middleware.rs  external_api_endpoints.rs  external_api_service.rs  feature_flag_endpoints.rs  feature_flag_middleware.rs  feature_flags.rs  handler_adapters.rs  handlers.rs  health_check_endpoints.rs  health_check_service.rs  jwt_validation.rs  lib.rs  liquidity_handlers.rs  main.rs  market_creation_endpoints.rs  market_creation_service.rs  market_data_service.rs  market_handlers.rs  memory_management.rs  mock_config.rs  mock_current_markets.rs  mock_service_manager.rs  mock_services.rs  order_types.rs  pda.rs  (+58 more)
betting_platform/api_runner/src/db/: fallback.rs  market_queries.rs  migrations.rs  migrations_production.rs  mod.rs  models.rs  polymarket_repository.rs  pool_optimization.rs  queries.rs
betting_platform/api_runner/src/handlers/: cache_handlers.rs  db_handlers.rs  (+10 more)
betting_platform/api_runner/tests/: integration_tests.rs  mod.rs  polymarket_e2e_test.rs  polymarket_integration_test.rs  test_environment_config.sh  test_feature_flags.sh  test_health_check.sh  test_mock_services.sh
betting_platform/flash_bets/program/: Cargo.toml
betting_platform/programs/betting_platform/: Cargo.toml
programs/correlation-engine/: Cargo.toml
programs/correlation-engine/src/: error.rs  instruction.rs  lib.rs  processor.rs
programs/correlation-engine/tests/: basic_integration.rs  integration_test.rs  lib.rs
programs/leverage-safety/: Cargo.toml
programs/leverage-safety/src/: engine.rs  error.rs  lib.rs  processor.rs
programs/leverage-safety/tests/: lib.rs
programs/phase10_betting/: Cargo.toml  IMPLEMENTATION_DOCS.md
programs/phase10_betting/src/: constants.rs  errors.rs  lib.rs  math.rs  types.rs
programs/phase10_betting/tests/: amm_router_integration.rs  bootstrap_integration.rs  referral_system_test.rs  user_journey_simulation.rs
programs/state-compression/: Cargo.toml
programs/state-compression/src/: error.rs  lib.rs  processor.rs
programs/state-compression/tests/: lib.rs
programs/verse-classification/: Cargo.toml
programs/verse-classification/src/: error.rs  fixed_point.rs  instruction.rs  lib.rs  processor.rs
programs/verse-classification/tests/: classification_tests.rs
(+1691 files in other folders)
