[workspace]

[package]
name = "betting_platform_api"
version = "0.1.0"
edition = "2021"

[lib]
name = "betting_platform_api"
path = "src/lib.rs"

[[bin]]
name = "betting_platform_api"
path = "src/main.rs"

[dependencies]
# Web framework
tokio = { version = "~1.29.1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
axum = { version = "0.6", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }
rand = "0.8"

# Solana
solana-client = "1.17"
solana-sdk = "1.17"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
borsh = "0.10.3"
bincode = "1.3"
bs58 = "0.5"

# Utils
futures = "0.3"
futures-util = "0.3"
anyhow = "1.0"
thiserror = "1.0"
lazy_static = "1.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }

# WebSocket
tokio-tungstenite = "0.20"

# Database (for caching)
# sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
jsonwebtoken = "9.2"
# bcrypt = "0.13"  # Temporarily disabled due to dependency conflicts
async-trait = "0.1"

# Rate limiting
governor = "0.6"

# Metrics
prometheus = "0.13"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }

# Crypto
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"

# Redis (for caching)
redis = { version = "0.24", features = ["tokio-comp"] }

# PostgreSQL
deadpool-postgres = "0.13"
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }

# Validation
validator = { version = "0.16", features = ["derive"] }

# Decimal math for trading
rust_decimal = { version = "1.32", features = ["serde", "db-tokio-postgres"] }
regex = "1.10"

# System info
num_cpus = "1.16"

# Network optimization
socket2 = "0.5"

# URL parsing
url = "2.5"
backoff = "0.4.0"
solana-program = "2.3.0"
dashmap = "6.1.0"

# Ethereum/Polygon integration
web3 = "0.19"
ethereum-types = "0.14"
secp256k1 = "0.27"
keccak-hash = "0.10"

# Platform utilities
libc = "0.2"

# Configuration management
toml = "0.8"
notify = "6.1"
serde_yaml = "0.9"

# Additional dependencies
once_cell = "1.19"
bytes = "1.5"
http-body-util = "0.1"

[dev-dependencies]
# axum-test = "14.0"
tokio-test = "0.4"
futures-util = "0.3"
