[package]
name = "verse-classification"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "verse_classification"

[dependencies]
solana-program = { workspace = true }
borsh = { workspace = true }
borsh-derive = { workspace = true }
thiserror = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
arrayref = { workspace = true }
bytemuck = { workspace = true }
sha3 = { workspace = true }

[dev-dependencies]
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
tokio = { version = "1", features = ["full"] }