[package]
name = "mv-flash"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib", "lib"]
name = "mv_flash"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.16.0"
spl-token = "3.5.0"
spl-associated-token-account = "1.1.3"
ark-groth16 = "0.4.0"
ark-bls12-381 = "0.4.0"
ark-ff = "0.4.0"
ark-relations = "0.4.0"
ark-serialize = "0.4.0"
ark-std = "0.4.0"
ark-r1cs-std = "0.4.0"
ark-crypto-primitives = "0.4.0"
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
borsh = "0.10"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "1.16.0"
solana-sdk = "1.16.0"
tokio = { version = "1.0", features = ["full"] }
proptest = "1.0"