[package]
name = "betting_platform"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "betting_platform"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
test-sbf = []


[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
spl-token = "7.0.0"
sha3 = "0.10.8"
fixed = "=1.11.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Deployment dependencies are included in anchor-lang

[dev-dependencies]
proptest = "1.5.0"
arbitrary = { version = "1.3", features = ["derive"] }
solana-program-test = "2.0.1"
solana-sdk = "2.0.1"
tokio = { version = "1", features = ["full"] }

